# grin-transfer

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.local.md~  Dockerfile  README.md  __init__.py  _grin_completions  activate.sh  auth.py  client.py  collect_books.py  common.py  converted_books.txt  demo_remote_auth.py  docker-compose.dev.yml  docker-compose.minio.yml  docker-compose.yml  docker-entrypoint.sh  download.py  etag_implementation_report.md  grin-docker  grin.py  grin_enrichment.py  install-completions.sh  issue-190-implementation-plan.md  issue-203-plan.md  monitor_processing.py  operations-py-test-summary.md  processing.py  pyproject.toml  r2-credentials-template.json  request_processing.py  run_config.py  setup-grin-docker-completion.sh  storage.py  sync.py  sync_pipeline.py  sync_status.py  (+6 more)
.github/workflows/: test.yml
collect_books/: __init__.py  __main__.py  config.py  exporter.py  models.py
docker-data/credentials/: credentials.json  gpg_passphrase.asc
docker-data/output/dockertest/: books.db  books_20250717_185220.csv  books_20250717_190517.csv  books_20250717_192525.csv  process_summary.json  progress.json  progress_backup_20250717_190518.json  progress_backup_20250717_192526.json  run_config.json
docker-data/output/dockertest2/: books.db  books_20250717_192626.csv  process_summary.json  progress.json  run_config.json
docker-data/output/dockertest3/: books.db  books_20250717_192716.csv  process_summary.json  progress.json  run_config.json
docker-data/output/r2/: books.db  books_20250717_192346.csv  process_summary.json  progress.json  run_config.json
docker-data/output/r2test/: books.db  books_20250717_195147.csv  process_summary.json  progress.json  run_config.json
docker-data/output/test/: books.db  books_20250717_184646.csv  books_20250717_184847.csv  books_20250717_184946.csv  books_20250717_195135.csv  books_export.csv  process_summary.json  progress_backup_20250717_184947.json  progress_backup_20250717_195136.json  run_config.json
docker-data/output/test_run/: books.db  books_20250717_194528.csv  process_summary.json  progress.json  run_config.json
docs/: csv-export-refactor-plan.md  docker.md  enrichment-refactoring-plan.md  issue-231-refactoring-plan.md  performance-optimization-todo.md  persistent-connection-optimization.md  process_summary.md  progress-tracker-refactoring.md  remove-progress-json-plan.md  schema.sql  session-management-plan.md  sql-queries.md  status-definitions.md  streaming-architecture-proposal.md
docs/diagrams/: .gitignore  check-conversion.mmd  collect-pipeline.mmd  generate-images.sh  generate-svgs.sh  lifecycle-summary.mmd  mermaid-config.json  mermaid-transparent.css  sync-detail.mmd  sync-pipeline.mmd  upload-step.mmd
examples/: docker-compose.minio.yml  r2-credentials-template.json
examples/docker/: .env.template  README.md  aws-credentials-template.json  client_secret.json  docker-compose.r2.yml  docker-compose.s3.yml  r2-credentials-template.json
src/grin_to_s3/: auth.py  client.py  common.py  compression.py  constants.py  database_utils.py  download.py  export.py  grin_enrichment.py  logging_config.py  process_summary.py  processing.py  queue_utils.py  run_config.py  staging.py  storage.py  sync.py
src/grin_to_s3/auth/: __init__.py  exceptions.py  grin_auth.py  setup.py
src/grin_to_s3/collect_books/: __init__.py  __main__.py  collector.py  config.py  exporter.py  grin_parser.py  models.py  progress.py
src/grin_to_s3/database/: __init__.py  connections.py  database_backup.py  database_utils.py
src/grin_to_s3/docker/: __init__.py  validation.py
src/grin_to_s3/extract/: __main__.py  main.py  text_extraction.py  tracking.py
src/grin_to_s3/logs/: __init__.py  __main__.py
src/grin_to_s3/metadata/: __init__.py  __main__.py  grin_enrichment.py  marc_extraction.py  tsv_parser.py
src/grin_to_s3/reports/: __main__.py
src/grin_to_s3/storage/: __init__.py  __main__.py  base.py  book_manager.py  book_storage.py  factories.py  staging.py
src/grin_to_s3/sync/: __init__.py  __main__.py  barcode_filtering.py  catchup.py  conversion_handler.py  core.py  csv_export.py  database_backup.py  db_updates.py  models.py  operations.py  pipeline.py  preflight.py  progress_reporter.py  stats.py  status.py  task_manager.py  teardown.py  utils.py
src/grin_transfer/: __init__.py  cli.py  client.py  common.py  constants.py  export.py  logging_config.py  process_summary.py  queue_utils.py
src/grin_transfer/auth/: grin_auth.py  setup.py
src/grin_transfer/collect_books/: __init__.py  __main__.py  collector.py  grin_parser.py
src/grin_transfer/database/: __init__.py  connections.py  database_backup.py  database_utils.py
src/grin_transfer/docker/: __init__.py  validation.py
src/grin_transfer/extract/: __init__.py  text_extraction.py
src/grin_transfer/metadata/: __main__.py  grin_enrichment.py  tsv_parser.py
src/grin_transfer/reports/: __init__.py  __main__.py
src/grin_transfer/storage/: __main__.py  base.py  book_manager.py  factories.py  staging.py
src/grin_transfer/sync/: __main__.py  (+7 more)
src/tests/: README.md  conftest.py  mocks.py  test_entrypoint.py  utils.py
test_extract/: 00000001.txt  00000002.txt  00000003.txt
test_extract/book2/: 00000001.txt  00000002.txt
test_extract/multi_output/: test_book.jsonl  test_book2.jsonl
tests/: README.md  __init__.py  mocks.py  test_docker_r2_bucket_config.py  test_logs_command_simple.py  test_parse_grin_line.py  test_process_summary.py  test_process_summary_integration.py  test_process_summary_upload.py
tests/manual/: .pytest_ini  README.md  __init__.py  e2e_test.py  test_auth.py  test_client.py  test_collect_books.py  test_headless_auth.py  test_minio_storage.py  test_storage.py
tests/sync/: conftest.py  test_catchup.py  test_core.py  test_models.py  test_status.py  test_utils.py
tests/unit/: README.md  __init__.py  test_collect_books.py  test_collect_books_config.py  test_grin_enrichment.py  test_processing_monitor_status.py  test_status_history.py  test_sync_status_integration.py
utils/: prune_unused_indexes.sql
(+231 files in other folders)
