[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grin-to-s3"
version = "2.0.0"
description = "Pipeline for archiving Google Books data from GRIN to S3"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Harvard Library Innovation Lab"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]

dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "aiosqlite>=0.20.0",
    "selectolax>=0.3.0",
    "fsspec>=2024.0.0",
    "s3fs>=2024.0.0",
    "gcsfs>=2024.0.0",
    "aioboto3>=12.0.0",
    "tenacity>=8.0.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-aiofiles>=23.0.0",
    "types-requests>=2.32.0",
    "types-PyYAML>=6.0.0",
    "boto3-stubs[s3]>=1.38.0",
    "mypy-boto3-s3>=1.38.0",
    "moto[s3]>=5.0.0",
    "aioresponses>=0.7.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
]

[project.scripts]
grin-collect = "collect_books.__main__:main"
grin-enrich = "grin_to_s3.metadata.grin_enrichment:main"

[project.urls]
Homepage = "https://github.com/harvard-idi/grin-to-s3-wip"
Repository = "https://github.com/harvard-idi/grin-to-s3-wip.git"
Issues = "https://github.com/harvard-idi/grin-to-s3-wip/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["collect_books*", "csv_export*", "metadata*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "Q",  # flake8-quotes
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.per-file-ignores]
"*" = ["E501"]  # Allow long lines globally

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "src.tests.mocks"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short -n auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
    "ignore::RuntimeWarning:asyncio",
    "ignore::UserWarning:aiosqlite",
]
